--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
 </head>
 
 <body>
-    <ul class="myList" data-effect='moveLeft'>
+    <ul class="myList effect" data-effect='fromBottom'>
+        <li>One</li>
+        <li>Two</li>
+        <li>Three</li>
+        <li>Four</li>
+        <li>Five</li>
+        <li>Six</li>
+        <li>Seven</li>
+        <li>Eight</li>
+        <li>Nine</li>
+        <li>Ten</li>
+    </ul>
+    <ul class="myList2 effect" data-effect='fromLeft'>
         <li>One</li>
         <li>Two</li>
         <li>Three</li>
